@@ -41,9 +41,7 @@ runto "p.adb:$bp_location"
 
 # First, print all the arrays without indexes
 
-gdb_test "set print array-indexes off" \
-         ""  \
-         "set print array-indexes to off"
+gdb_test_no_output "set print array-indexes off"
 
 gdb_test "print one_two_three" \
          "= \\(1, 2, 3\\)" \
@@ -79,9 +77,7 @@ gdb_test "print empty" \
 
 # Next, print all the arrays with the indexes
 
-gdb_test "set print array-indexes on" \
-         ""  \
-         "set print array-indexes to on"
+gdb_test_no_output "set print array-indexes on"
 
 gdb_test "print one_two_three" \
          "= \\(1 => 1, 2 => 2, 3 => 3\\)" \
